methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:18: error: not found: type color
def isFacingTrail(c: color):Boolean = {
                     ^