methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
   while (!estSurBiscuit()){
     if (isFacingTrail(c)){
       baisseBrosse()
       avance()
       leveBrosse()
     }
     else {
       gauche()

     }
   }
  prendBiscuit()
     
}

def isFacingTrail(c: color):Boolean = {
  var ver: Boolean = false
  if(estFaceMur()){
    return ver
  }
  avance()
  if (getCouleurSol()== c){
    ver = true
  }
  recule()
  return ver
  
}